--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
 
-pluginGroup = com.github.henry66666.intellijplatformplugintemplate
-pluginName = intellij-platform-plugin-template
+pluginGroup = com.github.henry.packager
+pluginName = packager
 pluginVersion = 0.0.1
 pluginSinceBuild = 193
 pluginUntilBuild = 201.*
